--- a/lenguaje de marcas/Exrecici1/LaVacaCiega/LaVacaCiega.html
+++ b/lenguaje de marcas/Exrecici1/LaVacaCiega/LaVacaCiega.html
@@ -9,10 +9,10 @@
 <body>
      <div class="centrado">
     <p class="text-sm font-black">Topant de cap en una i altra soca,</p>
-    <p class="text-md font-bold">avançant d’esma pel camí de l’aigua,</p>
-    <p class="text-xl font-semibold">se’n ve la vaca tota sola. És cega.</p>
-    <p class="text-2xl font-normal">D’un cop de roc llançat amb massa traça,</p>
-    <p class="text-3xl font-light">el vailet va buidar-li un ull, i en l’altre</p>
+    <p class="text-md font-bold">avançant d'esma pel camí de l'aigua,</p>
+    <p class="text-xl font-semibold">se'n ve la vaca tota sola. És cega.</p>
+    <p class="text-2xl font-normal">D'un cop de roc llançat amb massa traça,</p>
+    <p class="text-3xl font-light">el vailet va buidar-li un ull, i en l'altre</p>
     <p class="text-4xl font-thin">se li ha posat un tel: la vaca és cega.</p>
   </div>
 </body>
